--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -29,8 +29,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/welcomeText"
-        android:id="@+id/linear1"
+        android:id="@+id/linear0"
         android:layout_marginTop="55dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="podaj imie"
+            android:id="@+id/loginText0"
+            android:textSize="50px"
+            android:layout_weight="0.5"
+            android:gravity="center"
+            android:textStyle="bold"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/etLogin0"
+            android:layout_weight="0.5"
+            android:background="#e1dfdf" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/linear0"
+        android:id="@+id/linear1"
+        android:layout_marginTop="30dp">
 
         <TextView
             android:layout_width="match_parent"
