dodanie funkcjonalności wpisywania nowych użytkowników do bazy

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -111,6 +111,7 @@
         android:clickable="true"
         android:textColor="#f50b0b"
         android:layout_alignParentRight="true"
+        android:onClick="addUser"
         />
 
 
