--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -201,5 +201,16 @@
 
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Powrot do logowania"
+        android:id="@+id/btnBackToLogin"
+        android:layout_below="@+id/linear5"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="30px"
+        android:onClick="BackToLogin"
+
+        />
 
 </RelativeLayout>
