--- a/app/src/main/res/layout/activity_after_success_login.xml
+++ b/app/src/main/res/layout/activity_after_success_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,19 +7,28 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.dominik.mylockaplication.ActivityAfterLogin"
+    tools:context="com.example.dominik.mylockaplication.AfterSuccessLogin"
     android:weightSum="1">
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Welcome in my application"
+        android:layout_height="wrap_content"
+        android:text="Welcome to my application"
         android:id="@+id/textView"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_weight="0.71"
+        android:layout_marginTop="50dp"
+        android:layout_weight="0.5"
         android:textSize="50dp"
         android:gravity="center_vertical|center" />
-</LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
+        android:text="Wyloguj"
+        android:id="@+id/btnLogout"
+        android:layout_weight="0.5"
+        android:layout_below="@id/textView"
+        android:onClick="Logout"/>
+</RelativeLayout>
