--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -190,6 +190,7 @@
 
     </LinearLayout>
 
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -200,6 +201,21 @@
         android:layout_marginTop="30px"
 
         />
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Powrot do logowania"
+        android:id="@+id/btnBackToLogin"
+        android:layout_below="@+id/linear5"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="30px"
+        android:onClick="BackToLogin"
+
+        />
+
+
 
 
 </RelativeLayout>
