zmiana ikony, dodanie ograniczeń i naprawa powiadomien toast przy wielokrotnym wyborze zdarzenia

--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -48,7 +48,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/etName"
             android:layout_weight="0.5"
-            android:background="#e1dfdf" />
+            android:background="#e1dfdf"
+            android:singleLine="true"/>
 
     </LinearLayout>
     <LinearLayout
@@ -74,7 +75,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/etLogin"
             android:layout_weight="0.5"
-            android:background="#e1dfdf" />
+            android:background="#e1dfdf"
+            android:singleLine="true"/>
 
     </LinearLayout>
     <LinearLayout
@@ -107,7 +109,8 @@
             android:ems="10"
             android:layout_weight="0.5"
             android:contextClickable="false"
-            android:background="#e1dfdf" />
+            android:background="#e1dfdf"
+            android:singleLine="true"/>
 
     </LinearLayout>
 
@@ -141,7 +144,8 @@
             android:ems="10"
             android:layout_weight="0.5"
             android:contextClickable="false"
-            android:background="#e1dfdf" />
+            android:background="#e1dfdf"
+            android:singleLine="true"/>
 
     </LinearLayout>
 
@@ -168,7 +172,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/etEmail"
             android:layout_weight="0.5"
-            android:background="#e1dfdf" />
+            android:background="#e1dfdf"
+            android:singleLine="true"/>
 
     </LinearLayout>
 
